[package]
name = "repo-stats"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir = "2.3.2"
num-format = "0.4.3"
bytesize = "1.1.0"
colored = "2.0.0"
git2 = "0.15.0"
clap = { version = "4.0.26", features = ["derive"] }
indicatif = "0.17.5"
